FInal/y.output
Terminals unused in grammar

   DEF


Grammar

    0 $accept: program $end

    1 $@1: %empty

    2 program: ID $@1 MK_SEMICOLON program_body END ID

    3 program_body: opt_decl_list opt_func_decl_list compound_stmt

    4 opt_decl_list: decl_list
    5              | %empty

    6 decl_list: decl_list decl
    7          | decl

    8 decl: VAR id_list MK_COLON scalar_type MK_SEMICOLON
    9     | VAR id_list MK_COLON array_type MK_SEMICOLON
   10     | VAR id_list MK_COLON literal_const MK_SEMICOLON

   11 literal_const: INT_CONST
   12              | OP_SUB INT_CONST
   13              | FLOAT_CONST
   14              | OP_SUB FLOAT_CONST
   15              | SCIENTIFIC
   16              | OP_SUB SCIENTIFIC
   17              | STR_CONST
   18              | TRUE
   19              | FALSE

   20 opt_func_decl_list: func_decl_list
   21                   | %empty

   22 func_decl_list: func_decl_list func_decl
   23               | func_decl

   24 $@2: %empty

   25 $@3: %empty

   26 func_decl: ID MK_LPAREN opt_param_list $@2 MK_RPAREN opt_type $@3 MK_SEMICOLON compound_stmt END ID

   27 opt_param_list: param_list
   28               | %empty

   29 param_list: param_list MK_SEMICOLON param
   30           | param

   31 param: id_list MK_COLON type

   32 id_list: id_list MK_COMMA ID
   33        | ID

   34 opt_type: MK_COLON type
   35         | %empty

   36 type: scalar_type
   37     | array_type

   38 scalar_type: INTEGER
   39            | REAL
   40            | BOOLEAN
   41            | STRING

   42 array_type: ARRAY array_index TO array_index OF type

   43 array_index: INT_CONST

   44 stmt: compound_stmt
   45     | simple_stmt
   46     | cond_stmt
   47     | while_stmt
   48     | for_stmt
   49     | return_stmt
   50     | proc_call_stmt

   51 $@4: %empty

   52 compound_stmt: $@4 BEG opt_decl_list opt_stmt_list END

   53 opt_stmt_list: stmt_list
   54              | %empty

   55 stmt_list: stmt_list stmt
   56          | stmt

   57 simple_stmt: var_ref OP_ASSIGN boolean_expr MK_SEMICOLON
   58            | PRINT boolean_expr MK_SEMICOLON
   59            | READ boolean_expr MK_SEMICOLON

   60 proc_call_stmt: ID MK_LPAREN opt_boolean_expr_list MK_RPAREN MK_SEMICOLON

   61 cond_stmt: IF condition THEN opt_stmt_list ELSE opt_stmt_list END IF
   62          | IF condition THEN opt_stmt_list END IF

   63 condition: boolean_expr

   64 while_stmt: WHILE condition_while DO opt_stmt_list END DO

   65 condition_while: boolean_expr

   66 $@5: %empty

   67 $@6: %empty

   68 for_stmt: FOR ID $@5 OP_ASSIGN loop_param TO loop_param $@6 DO opt_stmt_list END DO

   69 loop_param: INT_CONST
   70           | OP_SUB INT_CONST

   71 return_stmt: RETURN boolean_expr MK_SEMICOLON

   72 opt_boolean_expr_list: boolean_expr_list
   73                      | %empty

   74 boolean_expr_list: boolean_expr_list MK_COMMA boolean_expr
   75                  | boolean_expr

   76 boolean_expr: boolean_expr OP_OR boolean_term
   77             | boolean_term

   78 boolean_term: boolean_term OP_AND boolean_factor
   79             | boolean_factor

   80 boolean_factor: OP_NOT boolean_factor
   81               | relop_expr

   82 relop_expr: expr rel_op expr
   83           | expr

   84 rel_op: OP_LT
   85       | OP_LE
   86       | OP_EQ
   87       | OP_GE
   88       | OP_GT
   89       | OP_NE

   90 expr: expr add_op term
   91     | term

   92 add_op: OP_ADD
   93       | OP_SUB

   94 term: term mul_op factor
   95     | factor

   96 mul_op: OP_MUL
   97       | OP_DIV
   98       | OP_MOD

   99 factor: var_ref
  100       | OP_SUB var_ref
  101       | MK_LPAREN boolean_expr MK_RPAREN
  102       | OP_SUB MK_LPAREN boolean_expr MK_RPAREN
  103       | ID MK_LPAREN opt_boolean_expr_list MK_RPAREN
  104       | OP_SUB ID MK_LPAREN opt_boolean_expr_list MK_RPAREN
  105       | literal_const

  106 var_ref: ID
  107        | var_ref dim

  108 dim: MK_LB boolean_expr MK_RB


Terminals, with rules where they appear

$end (0) 0
error (256)
ARRAY (258) 42
BEG (259) 52
BOOLEAN (260) 40
DEF (261)
DO (262) 64 68
ELSE (263) 61
END (264) 2 26 52 61 62 64 68
FALSE (265) 19
FOR (266) 68
INTEGER (267) 38
IF (268) 61 62
OF (269) 42
PRINT (270) 58
READ (271) 59
REAL (272) 39
RETURN (273) 71
STRING (274) 41
THEN (275) 61 62
TO (276) 42 68
TRUE (277) 18
VAR (278) 8 9 10
WHILE (279) 64
OP_ADD (280) 92
OP_SUB (281) 12 14 16 70 93 100 102 104
OP_MUL (282) 96
OP_DIV (283) 97
OP_MOD (284) 98
OP_ASSIGN (285) 57 68
OP_EQ (286) 86
OP_NE (287) 89
OP_GT (288) 88
OP_LT (289) 84
OP_GE (290) 87
OP_LE (291) 85
OP_AND (292) 78
OP_OR (293) 76
OP_NOT (294) 80
MK_COMMA (295) 32 74
MK_COLON (296) 8 9 10 31 34
MK_SEMICOLON (297) 2 8 9 10 26 29 57 58 59 60 71
MK_LPAREN (298) 26 60 101 102 103 104
MK_RPAREN (299) 26 60 101 102 103 104
MK_LB (300) 108
MK_RB (301) 108
ID (302) 2 26 32 33 60 68 103 104 106
INT_CONST (303) 11 12 43 69 70
FLOAT_CONST (304) 13 14
SCIENTIFIC (305) 15 16
STR_CONST (306) 17


Nonterminals, with rules where they appear

$accept (52)
    on left: 0
program (53)
    on left: 2, on right: 0
$@1 (54)
    on left: 1, on right: 2
program_body (55)
    on left: 3, on right: 2
opt_decl_list (56)
    on left: 4 5, on right: 3 52
decl_list (57)
    on left: 6 7, on right: 4 6
decl (58)
    on left: 8 9 10, on right: 6 7
literal_const (59)
    on left: 11 12 13 14 15 16 17 18 19, on right: 10 105
opt_func_decl_list (60)
    on left: 20 21, on right: 3
func_decl_list (61)
    on left: 22 23, on right: 20 22
func_decl (62)
    on left: 26, on right: 22 23
$@2 (63)
    on left: 24, on right: 26
$@3 (64)
    on left: 25, on right: 26
opt_param_list (65)
    on left: 27 28, on right: 26
param_list (66)
    on left: 29 30, on right: 27 29
param (67)
    on left: 31, on right: 29 30
id_list (68)
    on left: 32 33, on right: 8 9 10 31 32
opt_type (69)
    on left: 34 35, on right: 26
type (70)
    on left: 36 37, on right: 31 34 42
scalar_type (71)
    on left: 38 39 40 41, on right: 8 36
array_type (72)
    on left: 42, on right: 9 37
array_index (73)
    on left: 43, on right: 42
stmt (74)
    on left: 44 45 46 47 48 49 50, on right: 55 56
compound_stmt (75)
    on left: 52, on right: 3 26 44
$@4 (76)
    on left: 51, on right: 52
opt_stmt_list (77)
    on left: 53 54, on right: 52 61 62 64 68
stmt_list (78)
    on left: 55 56, on right: 53 55
simple_stmt (79)
    on left: 57 58 59, on right: 45
proc_call_stmt (80)
    on left: 60, on right: 50
cond_stmt (81)
    on left: 61 62, on right: 46
condition (82)
    on left: 63, on right: 61 62
while_stmt (83)
    on left: 64, on right: 47
condition_while (84)
    on left: 65, on right: 64
for_stmt (85)
    on left: 68, on right: 48
$@5 (86)
    on left: 66, on right: 68
$@6 (87)
    on left: 67, on right: 68
loop_param (88)
    on left: 69 70, on right: 68
return_stmt (89)
    on left: 71, on right: 49
opt_boolean_expr_list (90)
    on left: 72 73, on right: 60 103 104
boolean_expr_list (91)
    on left: 74 75, on right: 72 74
boolean_expr (92)
    on left: 76 77, on right: 57 58 59 63 65 71 74 75 76 101 102 108
boolean_term (93)
    on left: 78 79, on right: 76 77 78
boolean_factor (94)
    on left: 80 81, on right: 78 79 80
relop_expr (95)
    on left: 82 83, on right: 81
rel_op (96)
    on left: 84 85 86 87 88 89, on right: 82
expr (97)
    on left: 90 91, on right: 82 83 90
add_op (98)
    on left: 92 93, on right: 90
term (99)
    on left: 94 95, on right: 90 91 94
mul_op (100)
    on left: 96 97 98, on right: 94
factor (101)
    on left: 99 100 101 102 103 104 105, on right: 94 95
var_ref (102)
    on left: 106 107, on right: 57 99 100 107
dim (103)
    on left: 108, on right: 107


State 0

    0 $accept: . program $end

    ID  shift, and go to state 1

    program  go to state 2


State 1

    2 program: ID . $@1 MK_SEMICOLON program_body END ID

    $default  reduce using rule 1 ($@1)

    $@1  go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    2 program: ID $@1 . MK_SEMICOLON program_body END ID

    MK_SEMICOLON  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    2 program: ID $@1 MK_SEMICOLON . program_body END ID

    VAR  shift, and go to state 6

    $default  reduce using rule 5 (opt_decl_list)

    program_body   go to state 7
    opt_decl_list  go to state 8
    decl_list      go to state 9
    decl           go to state 10


State 6

    8 decl: VAR . id_list MK_COLON scalar_type MK_SEMICOLON
    9     | VAR . id_list MK_COLON array_type MK_SEMICOLON
   10     | VAR . id_list MK_COLON literal_const MK_SEMICOLON

    ID  shift, and go to state 11

    id_list  go to state 12


State 7

    2 program: ID $@1 MK_SEMICOLON program_body . END ID

    END  shift, and go to state 13


State 8

    3 program_body: opt_decl_list . opt_func_decl_list compound_stmt

    ID  shift, and go to state 14

    $default  reduce using rule 21 (opt_func_decl_list)

    opt_func_decl_list  go to state 15
    func_decl_list      go to state 16
    func_decl           go to state 17


State 9

    4 opt_decl_list: decl_list .
    6 decl_list: decl_list . decl

    VAR  shift, and go to state 6

    $default  reduce using rule 4 (opt_decl_list)

    decl  go to state 18


State 10

    7 decl_list: decl .

    $default  reduce using rule 7 (decl_list)


State 11

   33 id_list: ID .

    $default  reduce using rule 33 (id_list)


State 12

    8 decl: VAR id_list . MK_COLON scalar_type MK_SEMICOLON
    9     | VAR id_list . MK_COLON array_type MK_SEMICOLON
   10     | VAR id_list . MK_COLON literal_const MK_SEMICOLON
   32 id_list: id_list . MK_COMMA ID

    MK_COMMA  shift, and go to state 19
    MK_COLON  shift, and go to state 20


State 13

    2 program: ID $@1 MK_SEMICOLON program_body END . ID

    ID  shift, and go to state 21


State 14

   26 func_decl: ID . MK_LPAREN opt_param_list $@2 MK_RPAREN opt_type $@3 MK_SEMICOLON compound_stmt END ID

    MK_LPAREN  shift, and go to state 22


State 15

    3 program_body: opt_decl_list opt_func_decl_list . compound_stmt

    $default  reduce using rule 51 ($@4)

    compound_stmt  go to state 23
    $@4            go to state 24


State 16

   20 opt_func_decl_list: func_decl_list .
   22 func_decl_list: func_decl_list . func_decl

    ID  shift, and go to state 14

    $default  reduce using rule 20 (opt_func_decl_list)

    func_decl  go to state 25


State 17

   23 func_decl_list: func_decl .

    $default  reduce using rule 23 (func_decl_list)


State 18

    6 decl_list: decl_list decl .

    $default  reduce using rule 6 (decl_list)


State 19

   32 id_list: id_list MK_COMMA . ID

    ID  shift, and go to state 26


State 20

    8 decl: VAR id_list MK_COLON . scalar_type MK_SEMICOLON
    9     | VAR id_list MK_COLON . array_type MK_SEMICOLON
   10     | VAR id_list MK_COLON . literal_const MK_SEMICOLON

    ARRAY        shift, and go to state 27
    BOOLEAN      shift, and go to state 28
    FALSE        shift, and go to state 29
    INTEGER      shift, and go to state 30
    REAL         shift, and go to state 31
    STRING       shift, and go to state 32
    TRUE         shift, and go to state 33
    OP_SUB       shift, and go to state 34
    INT_CONST    shift, and go to state 35
    FLOAT_CONST  shift, and go to state 36
    SCIENTIFIC   shift, and go to state 37
    STR_CONST    shift, and go to state 38

    literal_const  go to state 39
    scalar_type    go to state 40
    array_type     go to state 41


State 21

    2 program: ID $@1 MK_SEMICOLON program_body END ID .

    $default  reduce using rule 2 (program)


State 22

   26 func_decl: ID MK_LPAREN . opt_param_list $@2 MK_RPAREN opt_type $@3 MK_SEMICOLON compound_stmt END ID

    ID  shift, and go to state 11

    $default  reduce using rule 28 (opt_param_list)

    opt_param_list  go to state 42
    param_list      go to state 43
    param           go to state 44
    id_list         go to state 45


State 23

    3 program_body: opt_decl_list opt_func_decl_list compound_stmt .

    $default  reduce using rule 3 (program_body)


State 24

   52 compound_stmt: $@4 . BEG opt_decl_list opt_stmt_list END

    BEG  shift, and go to state 46


State 25

   22 func_decl_list: func_decl_list func_decl .

    $default  reduce using rule 22 (func_decl_list)


State 26

   32 id_list: id_list MK_COMMA ID .

    $default  reduce using rule 32 (id_list)


State 27

   42 array_type: ARRAY . array_index TO array_index OF type

    INT_CONST  shift, and go to state 47

    array_index  go to state 48


State 28

   40 scalar_type: BOOLEAN .

    $default  reduce using rule 40 (scalar_type)


State 29

   19 literal_const: FALSE .

    $default  reduce using rule 19 (literal_const)


State 30

   38 scalar_type: INTEGER .

    $default  reduce using rule 38 (scalar_type)


State 31

   39 scalar_type: REAL .

    $default  reduce using rule 39 (scalar_type)


State 32

   41 scalar_type: STRING .

    $default  reduce using rule 41 (scalar_type)


State 33

   18 literal_const: TRUE .

    $default  reduce using rule 18 (literal_const)


State 34

   12 literal_const: OP_SUB . INT_CONST
   14              | OP_SUB . FLOAT_CONST
   16              | OP_SUB . SCIENTIFIC

    INT_CONST    shift, and go to state 49
    FLOAT_CONST  shift, and go to state 50
    SCIENTIFIC   shift, and go to state 51


State 35

   11 literal_const: INT_CONST .

    $default  reduce using rule 11 (literal_const)


State 36

   13 literal_const: FLOAT_CONST .

    $default  reduce using rule 13 (literal_const)


State 37

   15 literal_const: SCIENTIFIC .

    $default  reduce using rule 15 (literal_const)


State 38

   17 literal_const: STR_CONST .

    $default  reduce using rule 17 (literal_const)


State 39

   10 decl: VAR id_list MK_COLON literal_const . MK_SEMICOLON

    MK_SEMICOLON  shift, and go to state 52


State 40

    8 decl: VAR id_list MK_COLON scalar_type . MK_SEMICOLON

    MK_SEMICOLON  shift, and go to state 53


State 41

    9 decl: VAR id_list MK_COLON array_type . MK_SEMICOLON

    MK_SEMICOLON  shift, and go to state 54


State 42
